--- a/componentes/css/main.css
+++ b/componentes/css/main.css
@@ -5,8 +5,9 @@ body {
 	padding: 5px;
 }
 .shot{
-	box-shadow: 0px 0px 5px #888888;
+	box-shadow: 0px 0px 5px #888;
 	padding: 0px;
+	background-color: #FFF;
 }
 .shot ul {
 	padding-left: 0px;
@@ -21,6 +22,7 @@ body {
 }
 .shot ul li img{
 	margin: 0 auto;
+	box-shadow: 0px 0px 5px #888;
 }
 
 
